--- a/public/css/style.css
+++ b/public/css/style.css
@@ -41,3 +41,13 @@ body{
 button{
 	cursor: pointer;
 }
+
+#loader{
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: 99999;
+  background:url(../images/spinner.gif) 50% 50% no-repeat #ffffff;
+}
